Project

General

Profile

Actions

Bug #13127

closed

libc: for statement not indented

Added by Toomas Soome about 3 years ago. Updated about 3 years ago.

Status:
Closed
Priority:
Normal
Assignee:
Category:
lib - userland libraries
Start date:
Due date:
% Done:

100%

Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
External Bug:

Description

smatch error:

    /code/illumos-gate/usr/src/tools/proto/root_sparc-nd/opt/onbld/bin/sparc/smatch: ../port/gen/getutx.c:1056 allocid() warn: for statement not indented

Testing done: git diff -w master does return no output.

Actions #1

Updated by Electric Monk about 3 years ago

  • Gerrit CR set to 907
Actions #2

Updated by Toomas Soome about 3 years ago

  • Description updated (diff)
Actions #3

Updated by Electric Monk about 3 years ago

  • Status changed from In Progress to Closed
  • % Done changed from 90 to 100

git commit 37337afa1f0c469ab4b7343cf92da8c884b39b8b

commit  37337afa1f0c469ab4b7343cf92da8c884b39b8b
Author: Toomas Soome <tsoome@me.com>
Date:   2020-09-22T16:34:37.000Z

    13127 libc: for statement not indented
    Reviewed by: Marco van Wieringen <mvw@planets.elm.net>
    Approved by: Robert Mustacchi <rm@fingolfin.org>

Actions

Also available in: Atom PDF