13127 libc: for statement not indented Reviewed by: Marco van Wieringen <mvw@planets.elm.net> Approved by: Robert Mustacchi <rm@fingolfin.org>